[package]
name = "rust-can-bindings"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
network-interface = "0.1.6"
aligned-array = "1.0.1"
nix = "0.26.2"
num = "0.4"
num-derive = "0.3"
num-traits = "0.2"
